--- a/priv/templates/deb/control
+++ b/priv/templates/deb/control
@@ -1,6 +1,6 @@
-Package: @@appname@@
+Package: @@name@@
 Version: @@version@@
 Architecture: all
-Depends: erlang
-Description:
+Depends: erlang-base|erlang-base-hipe @@appdeps@@
+Synopsis: @@desc@@
 
