--- a/priv/templates/deb/control
+++ b/priv/templates/deb/control
@@ -2,5 +2,5 @@ Package: @@name@@
 Version: @@version@@
 Architecture: all
 Depends: erlang-base|erlang-base-hipe @@appdeps@@
-Synopsis: @@desc@@
+Description: @@desc@@
 
