rework debian packaging to make lintian happy (refs #156)
also includes a bunch of new config options:
package.maintainer
package.exclude
package.include_src
package.include_doc
package.deb.section
package.deb.priority
package.deb.erlang_base_apps

--- a/priv/templates/deb_erlrc/control
+++ b/priv/templates/deb_erlrc/control
@@ -1,6 +1,9 @@
 Package: @@name@@
 Version: @@version@@
 Architecture: all
-Depends: erlang-base|erlang-base-hipe, erlang-erlrc@@appdeps@@
+Section: @@section@@
+Priority: @@priority@@
+Maintainer: @@maintainer@@
+Depends: erlang-base|erlang-base-hipe, erlang-erlrc, @@appdeps@@
 Description: @@desc@@
-
+ Auto-generated package, no long description.
