--- a/tetrapak/config.ini
+++ b/tetrapak/config.ini
@@ -1,6 +1,5 @@
-[edoc]
-outdir  = "doc"
-private = true
-
-[build]
-erlc_options = []
+[package]
+maintainer  = "Felix Lange <fl@travelping.com>"
+include_src = true
+exclude     = "\\.gitignore|Makefile|Emakefile"
+deb.section = "devel"
