--- a/priv/templates/deb/control
+++ b/priv/templates/deb/control
@@ -1,6 +1,9 @@
 Package: @@name@@
 Version: @@version@@
 Architecture: all
-Depends: erlang-base|erlang-base-hipe@@appdeps@@
+Section: @@section@@
+Priority: @@priority@@
+Maintainer: @@maintainer@@
+Depends: erlang-base|erlang-base-hipe, @@appdeps@@
 Description: @@desc@@
-
+ Auto-generated package, no long description.
