pkg:deb: symlink binaries into /usr/bin (refs #437)

--- a/priv/templates/deb/control
+++ b/priv/templates/deb/control
@@ -4,6 +4,6 @@ Architecture: all
 Section: @@section@@
 Priority: @@priority@@
 Maintainer: @@maintainer@@
-Depends: erlang-base|erlang-base-hipe, @@appdeps@@
+Depends: erlang-base|erlang-base-hipe @@appdeps@@
 Description: @@desc@@
  Auto-generated package, no long description.
