--- a/priv/templates/deb_erlrc/control
+++ b/priv/templates/deb_erlrc/control
@@ -4,6 +4,7 @@ Architecture: all
 Section: @@section@@
 Priority: @@priority@@
 Maintainer: @@maintainer@@
-Depends: erlang-base|erlang-base-hipe, erlang-erlrc, @@appdeps@@
+Depends: erlang-base|erlang-base-hipe, erlang-erlrc (>= 0.2.5) @@appdeps@@
+Conflicts: erlang-erlrc (>= 0.3)
 Description: @@desc@@
  Auto-generated package, no long description.
