fix typos introduced by the last commit

--- a/priv/templates/deb_src/rules
+++ b/priv/templates/deb_src/rules
@@ -9,7 +9,7 @@ clean:
 	rm -f ../@@name@@_@@version@@_*.deb
 
 binary:
-	if [ '@@arch@@' == 'host' ]; then \
+	if [ '@@arch@@' = 'host' ]; then \
 	  eval $$(dpkg-architecture); \
 	  tetrapak pkg:deb -o 'package.architecture' "$$DEB_HOST_ARCH"; \
 	else \
