add manual debian packaging
this is necessary because bootstrap doesn't really work in our debian environment

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
-*.beam
-*.log
+/ebin/*.app
+/ebin/*.beam
+/tetrapak/.local.cache
 /src/tetrapak_ini_*.erl
 /dist
-/ebin/*.app
+
+/doc/*.html
+/doc/*.png
+/doc/*.css
+/doc/edoc-info
+
+/debian/*
+!/debian/rules
+!/debian/control
+!/debian/changelog
+!/debian/install
+!/debian/links
+!/debian/compat
+!/debian/source
