--- a/priv/templates/deb_src/control
+++ b/priv/templates/deb_src/control
@@ -3,11 +3,11 @@ Maintainer: @@maintainer@@
 Standards-Version: 3.9.1
 Priority: @@priority@@
 Section: @@section@@
-Build-Depends: erlang-base|erlang-base-hipe, erlang-tetrapak (>= 0.3.0)
+Build-Depends: @builddeps@
 
 Package: @@name@@
 Architecture: any
 Priority: @@priority@@
 Section: @@section@@
-Depends: erlang-base|erlang-base-hipe @@appdeps@@
+Depends: @@appdeps@@
 Description: @@desc@@
