fix debsrc build deps specification, bump to 0.3.1.5
oops

--- a/priv/templates/deb_src/control
+++ b/priv/templates/deb_src/control
@@ -3,7 +3,7 @@ Maintainer: @@maintainer@@
 Standards-Version: 3.9.1
 Priority: @@priority@@
 Section: @@section@@
-Build-Depends: @builddeps@
+Build-Depends: @@builddeps@@
 
 Package: @@name@@
 Architecture: any
