--- a/priv/templates/ipkg/control
+++ b/priv/templates/ipkg/control
@@ -4,4 +4,5 @@ Architecture: @@arch@@
 Section: @@section@@
 Priority: @@priority@@
 Maintainer: @@maintainer@@
+Depends: erlang @@appdeps@@
 Description: @@desc@@
