--- a/tetrapak/config.ini
+++ b/tetrapak/config.ini
@@ -1,8 +1,8 @@
 [build]
-version = "0.3.1.7"
+version = "0.3.1.8"
 
 [package]
-maintainer  = "Felix Lange <fl@travelping.com>"
+maintainer  = "Dmitry Russ <dr@travelping.com>"
 include_src = true
 exclude     = "\\.gitignore|Makefile|Emakefile"
 deb.section = "devel"
