[tetrapak] fix tetrapak version generation and bugfix to correctly update installed tetrapak on version change
Summary:
- update installed tetrapak on version change
- fix version generation
- check permissions to install tetrapak

Test Plan:
make install, apply chenge and try to install new version.
check that link "your_erlang_path/bin/tetrapak" updated for new version

Reviewers: druss, aschultz

CC: mkraemer, druss, aschultz

Differential Revision: https://review.tpip.net/D1255

--- a/tetrapak/config.ini
+++ b/tetrapak/config.ini
@@ -1,8 +1,8 @@
 [build]
-version = "0.4.22"
+version = "~t.~o~~~c"
 
 [package]
 maintainer  = "Dmitry Russ <dr@travelping.com>"
 include_src = true
-exclude     = "\\.gitignore|Makefile|Emakefile"
+exclude     = "\\.gitignore|\\.arcconfig|Makefile|Emakefile|README\\.md|TODO\\.md|NEWS\\.md"
 deb.section = "devel"
